# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: self-improving.yml  skill-manager.yml
self-improving/: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
self-improving/docs/: architecture-zh.md  configuration.md  hooks.md  migration.md  privacy.md  quickstart-zh.md  troubleshooting-zh.md
self-improving/examples/: claude-hooks.json
self-improving/examples/hook-payloads/: claude-post-tool.json  claude-pre-tool.json  claude-session-start.json  claude-stop.json  claude-user-prompt.json  codex-post-tool.json  codex-pre-tool.json  codex-session-start.json  codex-stop.json  codex-user-prompt.json
self-improving/self_improving/: __init__.py  __main__.py  cli.py  config.py  doctor.py  events.py  indexing.py  installer.py  migration.py  paths.py  review.py  security.py  storage.py
self-improving/self_improving/hooks/: __init__.py  common.py
self-improving/templates/: config.json  corrections.md  memory.md
self-improving/tests/: test_system.py
skill-manager/: README.md  SKILL.md
skill-manager/agents/: openai.yaml
skill-manager/references/: client-paths.md  maintenance.md
skill-manager/scripts/: bump_skill.py  core.py  delete_skill.py  doctor.py  list_skills.py  scan_and_check.py  toggle_skill.py  trace_source.py  update_skill.py
skill-manager/tests/: test_cli.py  test_core.py
